tests/sksl/errors/golden/DuffsDevice.glsl
### Compilation failed

error: 5: expected expression, but found 'case'
1 error
